<resources>
    <string name="app_name">Hurtpol</string>
    <string name="title_activity_card_menu">Pracownik - menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="create_new_account">Nie masz konta? Zarejestruj się</string>
    <string name="create_account">Załóż konto</string>
    <string name="login_if_you_a_member">Posiadasz już konto? Zaloguj się</string>
    <string name="name">Nazwa</string>
    <string name="logout">Wyloguj</string>
    <string name="take_title">Odbiór</string>
    <string name="take_description">Odbierz towar</string>
    <string name="put_title">Przekazanie</string>
    <string name="put_description">Przekaż towar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="account">Konto</string>
    <string name="products">Produkty</string>
    <string name="cart">Koszyk</string>
    <string name="productCode">Kod produktu</string>
    <string name="count">Ilość</string>
    <string name="save">Zapisz</string>
    <string name="firstname">Imię</string>
    <string name="lastname">Nazwisko</string>
    <string name="prev_button_text">Poprzednia</string>
    <string name="next_button_text">Następna</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="empty_product_list">Brak produktów na wybranej stronie!</string>
    <string name="null_product_id">Brak ID produktu!</string>
    <string name="server_error">Błąd serwera, spróbuj ponownie.</string>
    <string name="product_detail">Nazwa produktu: %1$s\nOpis: %2$s\nCena: %3$d</string>
    <string name="product_image_desc">Zdjęcie produktu</string>
    <string name="specification">Specyfikacja</string>
    <string name="pay">Zapać</string>
    <string name="products_upper_case">PRODUKTÓW</string>
    <string name="inShoppingCart">W koszyku:</string>
    <string name="items">szt.</string>
    <string name="addedToCart">Dodano produkt do koszyka</string>
    <string name="description">Opis</string>
    <string name="value">Wartość</string>
    <string name="full_name">Imie Nazwisko</string>
    <string name="price">Cena</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Kup z Google Pay</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Mapy</string>
    <string name="registration_completed">Rejestracja zakończona powodzeniem</string>
    <string name="registration_failed">Rejestracja nieudana</string>
    <string name="incorrect_email_address">Błędy adres e-mail</string>
    <string name="input_first_name_error">Minimum 3 znaki</string>
    <string name="input_last_name_error">Minimum 3 znaki</string>
    <string name="input_password_error">Od 4 do 10 znaków</string>
    <string name="canceled">Anulowano</string>
    <string name="scanned">Zeskanowano:</string>
    <string name="operation_completed">Operacja zakończona pomyślnie</string>
    <string name="operationFailed">Operacja zakończona niepowodzeniem</string>
    <string name="invalid_value">Błędna wartość</string>
    <string name="login_failed">Logowanie nieudane</string>
</resources>
