<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_products"
                android:icon="@drawable/ic_products_black_24dp"
                android:title="@string/products"/>
        <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/cart"/>
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout_24dp"
                    android:title="@string/logout"/>
        </menu>
    </item>

</menu>
