<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/app_bar_card_menu"
        tools:context=".ui.worker.cardmenu.CardMenuActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:clipToPadding="false">
    <androidx.cardview.widget.CardView
            android:clickable="true"
            android:id="@+id/card1"
            android:layout_width="340dp"
            android:layout_height="190dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="10dp"
            android:focusable="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/take"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/take_title"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayLight"
                    android:layout_margin="10dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/take_description"
                    android:padding="5dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:clickable="true"
            android:id="@+id/card2"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="340dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:focusable="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/put"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/put_title"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayLight"
                    android:layout_margin="10dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/put_description"
                    android:padding="5dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>