<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.signin.SigninActivity">
    <ImageView
            android:id="@+id/bookIconImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

    <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"
            android:theme="@style/ProgressBarStyle" />
    <RelativeLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:visibility="gone">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_email"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textEmailAddress"
                          android:hint="@string/email" android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_password"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textPassword"
                          android:hint="@string/password" android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/login"/>

            <TextView android:id="@+id/link_signup"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="24dp"
                      android:text="@string/create_new_account"
                      android:gravity="center"
                      android:textSize="16dp"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>