<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="100dp" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:padding="4dp" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/primaryDarkColor" />

                <TextView
                        android:id="@+id/textViewShortDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewTitle"
                        android:ellipsize="end"
                        android:maxLines="4"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/description"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                        android:id="@+id/textViewPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewShortDesc"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/price"
                        android:textColor="@color/secondaryDarkColor"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        android:layout_marginStart="61dp"/>

            </RelativeLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
